<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fafafa"
    android:orientation="vertical"
    tools:context=".activity.DetalleLugarActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#5AAC78">
                <ImageView
                    android:id="@+id/bAtras"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_atras"></ImageView>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_marginRight="20dp">

                    <TextView
                        android:id="@+id/tv_nombre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:autoSizeTextType="uniform"
                        android:gravity="center"
                        android:shadowColor="#000000"
                        android:shadowDx="5"
                        android:shadowDy="5"
                        android:shadowRadius="5"
                        android:text="Titulo"
                        android:textAlignment="center"
                        android:textColor="@android:color/white"
                        android:textSize="24sp"
                        android:textStyle="italic"></TextView>
                </LinearLayout>

            </Toolbar>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="horizontal">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginTop="20dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal">
                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:src="@drawable/ic_monumentos"/>
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_marginLeft="10dp"
                            android:gravity="center_horizontal">
                            <ImageView
                                android:id="@+id/iv_fav"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:src="@drawable/fav2"></ImageView>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Favorito"/>
                        </LinearLayout>


                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:gravity="center_horizontal"
                            android:layout_marginLeft="40dp">
                            <ImageView
                                android:id="@+id/iv_deseo"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:src="@drawable/des1"></ImageView>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Deseado"/>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:gravity="center_horizontal"
                            android:layout_marginLeft="40dp">

                            <ImageView
                                android:layout_marginTop="16dp"
                                android:id="@+id/iv_ruta"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:src="@drawable/ruta2"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAlignment="center"
                                android:textSize="13dp"
                                android:text="Agregar \na la ruta"
                                android:layout_gravity="center_horizontal"/>
                        </LinearLayout>

                    </LinearLayout>


                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="#84FAB0"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">

                <ImageView
                    android:layout_width="78dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_localidad"></ImageView>

                <TextView
                    android:id="@+id/tv_localidad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="15dp"
                    android:gravity="center"
                    android:text="Localidad"
                    android:textColor="@android:color/black"
                    android:textSize="15dp"></TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="#84FAB0"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                >

                <ImageView
                    android:layout_width="78dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginBottom="5dp"
                    android:src="@drawable/ic_postalcode">
                </ImageView>

                <TextView
                    android:id="@+id/tv_postalcode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="15dp"
                    android:text="Código Postal"
                    android:textColor="@android:color/black"
                    android:textSize="15dp"></TextView>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#84FAB0"
                android:layout_marginTop="10dp">

                <ImageView
                    android:layout_width="78dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginBottom="5dp"
                    android:src="@drawable/ic_location">

                </ImageView>

                <TextView
                    android:id="@+id/tv_streetadress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:text="Dirección"
                    android:textColor="@android:color/black"
                    android:textSize="15dp"></TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="#84FAB0"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="Descripción: "
                    android:textColor="#000000"
                    android:layout_marginTop="10dp"
                    android:textSize="25dp"></TextView>

                <TextView
                    android:id="@+id/tv_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:autoSizeTextType="uniform"
                    android:text="Descripcion"
                    android:textColor="@android:color/black"></TextView>
            </LinearLayout>
            <Button
                android:id="@+id/btn_web"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#5AAC78"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="Link Web"
                android:textColor="@android:color/white"
                android:textSize="10dp"></Button>
            <Button
                android:id="@+id/btn_horario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#5AAC78"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="Ver horario"
                android:textColor="@android:color/white"
                android:textSize="10dp"></Button>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal">

                <Button
                    android:id="@+id/btn_localizacion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:paddingLeft="40dp"
                    android:paddingRight="40dp"
                    android:backgroundTint="#5AAC78"
                    android:text="Ver localizacion"
                    android:textColor="@android:color/white"
                    android:textSize="10dp"></Button>

                <Button
                    android:id="@+id/btn_comoLlegar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#5AAC78"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:paddingLeft="40dp"
                    android:paddingRight="40dp"
                    android:text="Cómo llegar"
                    android:textColor="@android:color/white"
                    android:textSize="10dp"></Button>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>