...
    <fragment
        android:id="@+id/nav_home"
        android:name="es.unex.goenjoy.fragment.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_listaLugaresfav"
        android:name="es.unex.goenjoy.fragment.LugaresFavoritoFragment"
        android:label="@string/menu_fav"
        tools:layout="@layout/fragment_lugares" />
    <fragment
        android:id="@+id/nav_listaLugaresdeseo"
        android:name="es.unex.goenjoy.fragment.LugaresDeseoFragment"
...
