...
            android:textColor="#000000"
            android:textAlignment="center"
            android:textSize="36sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/logoApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/logo" />

    </LinearLayout>
...
